# SARD

./: .gitignore  CMakeLists.txt  GDP.cpp  README.md  bench_batch.sh  bench_sequential.sh  gas_vldb.cpp  global.cpp  global.h  kinetic_switch_test.cpp  kinetic_switch_test_2.cpp  labels.h  lrucache.h  mcmf.h  metric.cpp  pruneGDP.cpp  pruneGDP_degree_counting.cpp  pruneGDP_random.cpp  rtv_pnas.cpp  sample.cpp  sard_vldb.cpp  util.cpp  util.h
algos/: RAND.cpp  gas_vldb.cpp  kinetic_switch_test.cpp  pruneGDP.cpp  rtv_pnas.cpp  sard_vldb.cpp
kinetic_tree/: taxi_schedule.cpp  taxi_schedule.h
libs/: threadpool.h
libs/kinetic_tree/: taxi_schedule.h
libs/simd/: branchless.hpp  shuffle_dictionary.hpp
scripts/: bench_sard.sh  output_result.sh
simd/: avx2.hpp  naive.hpp
